--- a/src/pages/3a-companyIncorporation/companyIncorporation.scss
+++ b/src/pages/3a-companyIncorporation/companyIncorporation.scss
@@ -22,6 +22,9 @@
 
         &__tag {
             padding: 1.78rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
         }
     }
 
@@ -29,6 +32,7 @@
         // padding-top: 1.78rem;
         // padding-bottom: 1.78rem;
         padding: 1.78rem;
+
 
         &>ul {
             padding: 0;
