--- a/src/pages/3a Incorporation/style.scss
+++ b/src/pages/3a Incorporation/style.scss
@@ -159,7 +159,7 @@ form {
         font-size: 12px;
         line-height: 16px;
         padding: 0 1rem;
-        background: #F2F2F2;
+        background: #FAFAFA;
         border-radius: 2px;
     }
     .form-group {
